--- a/GeometriAngular/GeomitiAngular/src/app/app.component.html
+++ b/GeometriAngular/GeomitiAngular/src/app/app.component.html
@@ -29,9 +29,41 @@
   p {
     margin: 0;
   }
+  
+  .terminal {
+    position: relative;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 6px;
+    padding-top: 45px;
+    margin-top: 8px;
+    overflow: hidden;
+    background-color: rgb(15, 15, 16);
+  }
+
+  .terminal::before {
+    content: "\2022 \2022 \2022";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 4px;
+    background: rgb(58, 58, 58);
+    color: #c2c3c4;
+    width: 100%;
+    font-size: 2rem;
+    line-height: 0;
+    padding: 14px 0;
+    text-indent: 4px;
+  }
+
+  .terminal pre {
+    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+    color: white;
+    padding: 0 1rem 1rem;
+    margin: 0;
+  }
 
   Input{
-    position: absolut;
     margin: auto;
     max-width: 200px;
     border-radius: 100px;
@@ -41,7 +73,7 @@
   }
   .content {
     display: flex;
-    margin: 82px auto 32px;
+    margin: 500px auto;
     padding: 0 16px;
     max-width: 960px;
     flex-direction: column;
@@ -50,14 +82,11 @@
 
 
 </style>
-<div class="content">
+<div class="content" role="main">
   <div class="Input">
     <input type="text">
   </div>
   <div class="Input">
     <input type="text">
   </div>
-
-</div>
-
 <router-outlet></router-outlet>
