--- a/AngularTest/AngularTesting/src/styles.css
+++ b/AngularTest/AngularTesting/src/styles.css
@@ -2,27 +2,59 @@
 .header{
     margin: auto;
     width: 50%;
-    background-color: #e0e0e0;
     text-align: center;
 }
 
-.background{
-    width: 100%;
-    background-color: blue;
+.header-background{
+    margin-left: -10px;
+    margin-top: -20px;
+    width: 101%;
+    height: 100px;
+    background-color: rgba(190, 190, 255, 0.473);
     align-content: center;
 }
 
-.header h2,
-.header h3{
+.body{
+    position: fixed; 
+    overflow-y: hidden;
+    overflow-x: hidden;
+    width: 100%;
+}
+
+.background{
+    margin-left: -10px;
+    width: 101%;
+    height: 700px;
+    
+    background-image: url('Image\BackgroundImage.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    
+}
+
+.padding{
+    padding-top: 10px;
+}
+
+input{
+    background-color: cornsilk;
+    border-radius: 10px;
+}
+
+.input-background{
+    margin:auto;
+    width: 300px;
+    height: 150px;
+    background-color: rgba(190, 190, 255, 0.616);
+    text-align: center;
+}
+
+.spacer{
+    height: 10px;
+}
+
+.header h1{
     font-family: Arial;
     color: #000000;
-}
-
-.header h2{
     text-transform: uppercase;
-}
-
-.header h3{
-    font-size: small;
-    font-style: italic;
 }
