--- a/AngularTest/AngularTesting/src/app/app.component.html
+++ b/AngularTest/AngularTesting/src/app/app.component.html
@@ -21,7 +21,7 @@
       <button>Calculate</button>
     </div>
     <div class="padding">
-      <input type="the answard">
+      <input type="solution">
     </div>
   </div>
 </div>
