made the back end
made the diffrent classes and components

you can now insert 2 numbers (ref to 2 sides of a square/rectangel)

and it will calculate the area and perimeter out from the 2 numbers

--- a/AngularTest/AngularTesting/src/app/app.component.html
+++ b/AngularTest/AngularTesting/src/app/app.component.html
@@ -9,20 +9,8 @@
       <h1>{{title}}</h1>
     </div>
   </div>
-  <div class="padding"></div>
-  <div class="input-background">
-    <div class="padding">
-      <input type="text">
-    </div>
-    <div class="padding">
-      <input type="text">
-    </div>
-    <div class="padding">
-      <button>Calculate</button>
-    </div>
-    <div class="padding">
-      <input type="solution">
-    </div>
+  <div>
+    <app-geometry-component></app-geometry-component>
   </div>
 </div>
 
