--- a/PeriodicSystem/src/app/periodic-table/periodic-table.component.html
+++ b/PeriodicSystem/src/app/periodic-table/periodic-table.component.html
@@ -25,7 +25,12 @@
     <tbody>
         <tr>
             <th><div class="number-element"><h2>1</h2></div> </th>
-            <th><div>H</div></th>
+            <th><div>
+                <h4>{{elements[0].number}}</h4><br>
+                <h2>{{elements[0].symbol}}</h2><br>
+                <h3>{{elements[0].name}}</h3><br>
+                <h6>{{elements[0].atomic_mass}}</h6>
+            </div></th>
             <th><div>SYM</div></th>
             <th colspan="10" rowspan="3">information about each element</th>
             <th colspan="5">spaser</th>
